--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <jmh.version>1.33</jmh.version>
-        <bc.version>1.69</bc.version>
+        <jmh.version>1.34</jmh.version>
+        <bc.version>1.70</bc.version>
+        <junit5.version>5.8.2</junit5.version>
     </properties>
 
     <dependencies>
@@ -43,15 +44,15 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.2</version>
+            <version>${junit5.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
